co2ok_dojo/co2ok_dojo/static/css/ninja-register.css
.header-register {
    background-image: url(../images/ninjaDesign_install_BG.svg);
}
.register-container-padder{
    padding-top: 100px;
    padding-bottom: 340px;
}

@media only screen and (max-width: 400px) {
  .register-container-padder {
    padding-bottom: 140px;
  }
}

.form_session
{

   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   width: 100%;

}

.social_container
{

   height: 200px;
   border-right: 2px solid gray;

}

.register_form
{

   width: auto;
   height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;

}

.register_form p
{

   width: 90%;
   height: auto;

}


.register_form p input{

  width: 90%;
  height: 45px;
  border: 1px solid #e3e3e3;
  border-radius: 5px;
  font-size: 17px;
  padding-left: 10px;

}

.register_form p label{

   display: none;

}

.skills-text {
  width: 50%;
}

